--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Sendgrid": {
+        "SenderEmail": "ecemutlu.tr@gmail.com",
+        "SenderName": "Ece Mutlu"
     }
-  },
-  "AllowedHosts": "*"
 }
