Blood Check Request has updated. Email sent to the donors and requesters. Local DB connection chaged to Azure DB.

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,13 +1,22 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "Sendgrid": {
-        "SenderEmail": "ecemutlu.tr@gmail.com",
-        "SenderName": "Ece Mutlu"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "Sendgrid": {
+    "SenderEmail": "ecemutlu.tr@gmail.com",
+    "SenderName": "Ece Mutlu"
+  },
+  "VaultUri": "https://bloodbankapivault.vault.azure.net/",
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "olgu.com.tr",
+    "TenantId": "ed765243-b32e-4d03-8a4c-486401580906",
+    "ClientId": "6419ba66-338c-4a92-b6c0-2f12fc2f0ff1",
+    "CallbackPath": "/signin-oidc",
+    "Scopes": ""
+  }
 }
