UI controller updated

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -6,6 +6,6 @@
         }
     },
     "ConnectionStrings": {
-        "Default": "Data Source=test20240101.database.windows.net;Initial Catalog=bloodbank;User ID=testadmin;Password=Dfregs76532;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+        "Default": "Data Source=test20240101.database.windows.net;Initial Catalog=bloodbank;User ID=testadmin;Password=Dfregs76532;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;MultipleActiveResultSets=true"
     }
 }
