--- a/Api/appsettings.Production.json
+++ b/Api/appsettings.Production.json
@@ -6,6 +6,6 @@
         }
     },
     "ConnectionStrings": {
-        "Default": "Data Source=test20240101.database.windows.net;Initial Catalog=bloodbank;User ID=testadmin;Password=********;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+        "Default": "Data Source=test20240101.database.windows.net;Initial Catalog=bloodbank;User ID=testadmin;PasswordDfregs76532Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;MultipleActiveResultSets=true"
     }
 }
